<resources>
    <string name="app_name">TipTime</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="round_tip">Round Tip</string>
    <string name="calculate">Calculate</string>
    <string name="ok_15">OK (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="tip_amount_d">Tip Amount: %s</string>
</resources>