<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serviceCost"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="?attr/textAppearanceBody1"
        android:hint="@string/cost_of_service"
        android:textSize="16sp"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/shrine_pink_900"
        app:startIconDrawable="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/textService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintTop_toBottomOf="@id/serviceCost"
        app:layout_constraintStart_toStartOf="@id/serviceCost"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        >

    </TextView>

    <RadioGroup
        android:id="@+id/quantityTip"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="36dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/serviceCost"
        app:layout_constraintStart_toStartOf="@id/serviceCost"

        >

        <RadioButton
            android:id="@+id/twenty"
            android:buttonTint="@color/shrine_pink_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/eighteen"
            android:buttonTint="@color/shrine_pink_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/fifteen"
            android:buttonTint="@color/shrine_pink_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial

        android:id="@+id/roundPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_tip"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/serviceCost"
        app:layout_constraintTop_toBottomOf="@+id/quantityTip"
        />

    <Button
        android:id="@+id/calculateTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:backgroundTint="@color/shrine_pink_900"
        app:layout_constraintTop_toBottomOf="@id/roundPrice"
        app:layout_constraintStart_toStartOf="@id/serviceCost"
        app:layout_constraintEnd_toEndOf="@+id/roundPrice"
        />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/tip_amount_d"
        app:layout_constraintTop_toBottomOf="@id/calculateTip"
        app:layout_constraintEnd_toEndOf="@id/calculateTip"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>